# context_management

./: .gitignore  README.md  SUMMARY.md  pyproject.toml  quickstart.sh  requirements.txt  task_a_decompilation_explorer.py  task_b_call_interceptor.py  task_c_haiku_agent.py
analysis_results/: README.md  example_output.json
haiku_agent_logs/: README.md  example_context_checks.json  example_conversation.json
interception_logs/: README.md  example_calls.jsonl  example_report.json
