[project]
name = "context-management"
version = "0.1.0"
description = "Research project exploring Claude Code's internal mechanisms through reverse engineering and agent development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.0.0",
    "claude-agent-sdk>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.292",
]
analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
